tests/neg/experimental-with-lang-feature/B.scala
def test: Unit = erasedFun(1) // error
